After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 595139 - Memory leak
Memory leak
Status: RESOLVED FIXED
Product: gnome-nettool
Classification: Applications
Component: general
unspecified
Other Linux
: Normal normal
: ---
Assigned To: Germán Poo-Caamaño
Rodrigo Moya
Depends on:
Blocks:
 
 
Reported: 2009-09-14 09:44 UTC by Vincent Untz
Modified: 2011-07-13 08:51 UTC
See Also:
GNOME target: ---
GNOME version: ---



Description Vincent Untz 2009-09-14 09:44:27 UTC
Forwarding https://bugzilla.novell.com/show_bug.cgi?id=538919

I just had a look at factory package gnome-nettool-2.27.4-1.6

For source code file gnome-nettool-2.27.4/src/finger.c around line
90, function finger_do, is the following code

                program_name = g_strdup ("pinky");

but I fail to find the matching call to free. This looks like a memory
leak to me. Further, from the command line

$ fgrep program_name ../BUILD/gnome-nettool-2.27.4/src/finger.c
        gchar *program_name = NULL;
                program_name = g_strdup ("pinky");
                program_name = g_strdup ("finger");
                command_line[i++] = g_strdup (program_name);

Suggest either remove the first two pointless calls to strdup or add a
call to free near the end of the routine.
Comment 1 Germán Poo-Caamaño 2011-07-13 08:51:12 UTC
This problem has been fixed in the development and master version. The fix will be available in the next major software release. Thank you for your bug report.