Fix memory leak #595139

https://bugzilla.gnome.org/show_bug.cgi?id=595139

Signed-off-by: Germán Póo-Caamaño <gpoo@gnome.org>